# drsyl

./: CMakeLists.txt  Makefile  README.md  defines.h  main.c  majorant.c  majorant.h  norm.c  norm.h  partition.c  partition.h  random.c  random.h  reference.c  reference.h  robust.c  robust.h  syl-task.c  syl-task.h  sylvester.c  sylvester.h  typedefs.h  update-task.c  update-task.h  utils.c  utils.h  validation.c  validation.h
